examples/passing/service-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: partner-api-service
  namespace: default
spec:
  selector:
    app: partner-api
  ports:
    - port: 443
      targetPort: 8443
